<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VolumeDown</string>
    <string name="settings_activity_title">VolumeDown Settings</string>
    <string name="pref_cat_configuration">Configuration</string>
    <string name="pref_enable">Monitor volume changes</string>
    <string name="pref_enable_summ">Enable background service to act on volume changes</string>
    <string name="pref_volume_level">Base media volume</string>
    <string name="pref_volume_level_summ">Media volume level to set when restoring</string>
    <string name="pref_timeout">Timeout time</string>
    <string name="pref_timeout_summ">Idle time after which the screen is turned off</string>
    <string name="pref_timeout_title">Timeout time</string>
    <string name="pref_timeout_default">30</string>
    <string name="pref_cat_debug">Debug</string>
    <string name="pref_log">Log to external storage</string>
    <string name="pref_log_summ">Write logging data to the external storage</string>
    <string name="pref_toast">Show toasts</string>
    <string name="pref_toast_summ">Show toast on app actions</string>
</resources>
